--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "rm -rf build && webpack",
+    "start": "webpack-dev-server",
+    "hot": "webpack-dev-server --hot --inline"
   },
   "author": "",
   "license": "ISC",
@@ -14,9 +16,12 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "file-loader": "^0.11.0",
+    "html-webpack-plugin": "^2.28.0",
     "image-webpack-loader": "^3.3.0",
     "url-loader": "^0.5.8",
-    "webpack": "^2.3.2"
+    "webpack": "^2.3.2",
+    "webpack-dev-server": "^2.4.2",
+    "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
     "jquery": "^3.2.1"
