--- a/package.json
+++ b/package.json
@@ -4,26 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rm -rf build && webpack",
-    "start": "webpack-dev-server",
-    "hot": "webpack-dev-server --hot --inline"
+    "build": "webpack"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/EdgarDelaRosa/webpack-demo.git"
+  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "babel-core": "^6.24.0",
-    "babel-loader": "^6.4.1",
-    "babel-preset-es2015": "^6.24.0",
-    "file-loader": "^0.11.0",
-    "html-webpack-plugin": "^2.28.0",
-    "image-webpack-loader": "^3.3.0",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.3.2",
-    "webpack-dev-server": "^2.4.2",
-    "webpack-visualizer-plugin": "^0.1.11"
+  "bugs": {
+    "url": "https://github.com/EdgarDelaRosa/webpack-demo/issues"
   },
-  "dependencies": {
-    "jquery": "^3.2.1"
+  "homepage": "https://github.com/EdgarDelaRosa/webpack-demo#readme",
+  "devDependencies": {
+    "html-webpack-plugin": "^2.28.0",
+    "webpack": "^2.3.3"
   }
 }
