--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --open --env development --config webpack.config.babel.js",
-    "build": "webpack --env production"
+    "build": "webpack --env production",
+    "lint:js": "eslint app/ webpack.*.js --cache"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,8 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-stage-0": "^6.22.0",
     "babel-register": "^6.24.0",
+    "eslint": "^3.19.0",
+    "eslint-loader": "^1.7.1",
     "html-webpack-plugin": "^2.28.0",
     "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2"
