--- a/package.json
+++ b/package.json
@@ -8,12 +8,9 @@
     "build": "webpack --env production",
     "lint:js": "eslint app/ webpack.*.js --cache"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/EdgarDelaRosa/webpack-demo.git"
-  },
+  "repository": "git+https://github.com/EdgarDelaRosa/webpack-demo.git",
   "keywords": [],
-  "author": "",
+  "author": "ecastillo <ecastillo2020@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/EdgarDelaRosa/webpack-demo/issues"
@@ -29,6 +26,7 @@
     "eslint-loader": "^1.7.1",
     "html-webpack-plugin": "^2.28.0",
     "webpack": "^2.3.3",
-    "webpack-dev-server": "^2.4.2"
+    "webpack-dev-server": "^2.4.2",
+    "webpack-merge": "^4.1.0"
   }
 }
