--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "^3.19.0",
     "eslint-loader": "^1.7.1",
     "html-webpack-plugin": "^2.28.0",
+    "less-loader": "^4.0.3",
     "webpack": "^2.3.3",
     "webpack-dev-server": "^2.4.2",
     "webpack-merge": "^4.1.0"
